# aperture-router

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  INSTALL.md  LICENSE  README.md  SECURITY_AUDIT_2026-04-27.md  config.example.toml
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD  README.md  aperture-router.install
contrib/systemd/: README.md  aperture-router.service  aperture-router.sysconfig  aperture-router.sysusers  aperture-router.tmpfiles
docs/: WORKFLOW.md
scripts/: build-release.sh
src/: config.rs  http_client.rs  lib.rs  main.rs  server.rs
src/cli/: commands.rs  mod.rs  model_fetcher.rs  openclaw_export.rs  opencode_export.rs  security.rs  wizard.rs
src/discovery/: mod.rs  models.rs
src/middleware/: auth.rs  mod.rs
src/provider/: mod.rs  registry.rs
src/proxy/: client.rs
src/routes/: admin.rs  chat.rs  error.rs  health.rs  messages.rs  mod.rs  models.rs  proxy.rs  streaming.rs
src/types/: anthropic.rs  mod.rs  openai.rs  validation.rs
tests/: auth_tests.rs  config_tests.rs  integration_tests.rs  proxy_tests.rs  route_tests.rs  type_tests.rs  validation_tests.rs
