[package]
name = "aperture-router"
version = "0.2.0"
edition = "2021"
description = "Universal AI router for Tailscale Aperture"
license = "MIT"
repository = "https://github.com/Wayazi/aperture-router"
authors = ["Wayazi"]
keywords = ["proxy", "ai", "aperture", "tailscale", "anthropic", "openai"]
categories = ["web-programming::http-server", "api-bindings"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "decompression-gzip", "limit", "set-header"] }
http = "1.0"
subtle = "2.5"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# URL validation
url = "2.5"

# Async utilities
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Interactive prompts for config wizard
inquire = "0.7"

# Secure memory clearing for API keys
zeroize = { version = "1.8", features = ["derive"] }

# Config directory paths
dirs = "5"

# UUID for request tracking
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wiremock = "0.6"
mockall = "0.13"
tempfile = "3"
