[package]
name = "aperture-router"
version = "0.2.2"
edition = "2021"
description = "Universal AI router for Tailscale Aperture"
license = "MIT"
repository = "https://github.com/Wayazi/aperture-router"
authors = ["Wayazi"]
keywords = ["proxy", "ai", "aperture", "tailscale", "anthropic", "openai"]
categories = ["web-programming::http-server", "api-bindings"]
readme = "README.md"

[features]
default = []
wizard = ["inquire"]

[dependencies]
# Async runtime - minimal features for memory efficiency
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "sync", "time", "macros"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "set-header"], default-features = false }
http = "1.0"
subtle = "2.5"
sha2 = "0.10"

# HTTP client - single TLS backend (rustls), no default features
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# URL validation
url = "2.5"

# Async utilities
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15"
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Interactive prompts for config wizard (optional)
inquire = { version = "0.9", optional = true }

# Secure memory clearing for API keys
zeroize = { version = "1.8", features = ["derive"] }

# Config directory paths
dirs = "5"

# UUID for request tracking - no wasm
uuid = { version = "1", features = ["v4"], default-features = false }

# Lazy static initialization for shared client
once_cell = "1.19"

[profile.release]
lto = "thin"
strip = true
opt-level = "z"
codegen-units = 1

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wiremock = "0.6"
mockall = "0.13"
tempfile = "3"
